# mem0-falkordb

./: .coverage  .gitignore  AGENTS.md  README.md  pyproject.toml  wordlist.dic
.github/: spellcheck-settings.yml  wordlist.txt
.github/workflows/: ci.yml  lint.yml  publish.yml
demo/: .env.example  .gitignore  README.md  demo.py  docker-compose.yml  inspect_graphs.py  pyproject.toml  requirements.txt
src/mem0_falkordb/: __init__.py  config.py  graph_memory.py  patch.py
tests/: test_config.py  test_e2e.py  test_graph_memory.py  test_patch.py
